<resources>
    <string name="app_name">CT Poisonous Plant Identifier</string>
    <string name="search_elements">Search elements</string>
    <string name="poison_ivy">Poison Ivy</string>
    <string name="poison_oak">Poison Oak</string>
    <string name="poison_sumac">Poison Sumac</string>
    <string name="treatments">Treatments</string>
    <string name= "bottom_bar">Classify a Poisonous Plant Here!</string>
    <string name="ct_poisonous_plant_identifier">CT Poisonous Plant Identifier</string>
    <string name="ct_poisonous_plant_classifier">CT Poisonous Plant Classifier</string>
    <string name="poison_sumac_info">Poison sumac is a plant that can cause an itchy, red, and blistering rash when touched. It\'s found in wetland areas in the eastern United States, typically growing as a shrub or small tree.\n\nPoison sumac has leaves that are arranged in pairs, with a single leaf at the end of the stem. Each leaf has a smooth edge and a pointed oval shape, with a distinctive V-shaped pattern on the leaf stem. The leaves are typically a shiny green color and can turn red or yellow in the fall.\n\nOne way to distinguish poison sumac from other plants is to look for the distinctive V-shaped pattern on the leaf stem, which is not present on other plants in the same family. The leaves of poison sumac can also look similar to those of other plants, such as smooth sumac or staghorn sumac, but these plants typically have more leaves per stem and lack the V-shaped pattern.\n\nIt\'s also important to note that poison sumac is less common than poison ivy or poison oak, and it typically grows in more remote or swampy areas. If you\'re unsure about whether a plant is poison sumac or not, it\'s best to avoid touching it altogether to prevent the risk of an allergic reaction.</string>
    <string name="poison_oak_info">Poison oak is a plant that, like poison ivy, can cause an itchy, red, and blistering rash when touched. It\'s found throughout North America, typically in wooded areas, fields, and along roadsides.\n\nPoison oak has leaves that are similar in shape to those of an oak tree, with three to seven leaflets per stem. The leaflets can be either smooth or toothed, and they have a distinctive lobed shape with rounded edges. The leaves can range in color from bright green to red or brown, depending on the season.\n\nOne way to distinguish poison oak from other plants is to look for its distinctive leaf shape and lobed edges. However, the leaves of poison oak can also look similar to those of other plants, such as blackberry or raspberry bushes, which can also have three to seven leaflets. The best way to identify poison oak is to look for the characteristic shiny or oily appearance of the leaves, which can be a clue that the plant is poisonous. In addition, poison oak often grows as a low shrub or ground cover, while other plants with similar leaves may grow as a vine or climbing plant.\n\nAgain, if you\'re unsure about whether a plant is poison oak or not, it\'s best to avoid touching it altogether to prevent the risk of an allergic reaction.</string>
    <string name="poison_ivy_info">Poison ivy is a plant that can cause an itchy, red, and blistering rash when touched. It\'s found throughout North America, typically in wooded areas, fields, and along roadsides. The plant has three leaflets that are shaped like a pointed oval, with smooth or slightly toothed edges. The leaves can range from light green to reddish in color and are often shiny. The plant can grow as a vine or a shrub, and it may produce greenish-white flowers and small, whitish berries.\n\nThe best way to distinguish poison ivy from other plants is to look for the three leaflets on each stem. The leaves of poison ivy are arranged in an alternating pattern, with each stem having three leaflets. The leaves of other plants, such as Virginia creeper or box elder, may look similar, but they typically have five leaflets instead of three.\n\nIt\'s also important to note that the old saying ‘Leaves of three, let it be’ is a good rule of thumb to follow when trying to identify poison ivy, but not all plants with three leaves are poisonous. Other plants, such as strawberry and clover, have three leaves but are not harmful. If you\'re unsure about whether a plant is poison ivy or not, it\'s best to avoid touching it altogether.</string>
    <string name="treatments_info">Here are some possible treatments for a rash caused by touching poison ivy, poison sumac, or poison oak:\n\n 1) Wash the affected area with soap and water as soon as possible after contact. This can help remove any of the plant\'s oils from your skin, reducing the severity of the reaction.\n\n 2) Apply a cool compress or soak the affected area in cool water to help reduce itching and inflammation.\n\n 3) Use over-the-counter creams or lotions that contain calamine, hydrocortisone, or benzocaine to help reduce itching and soothe the skin. You can also try an oatmeal bath or applying a paste made from baking soda and water to the affected area.\n\n 4) Take an oral antihistamine, such as diphenhydramine (Benadryl), to help reduce itching and swelling.\n\n 5) In severe cases, a doctor may prescribe a stronger topical or oral medication, such as corticosteroids or antibiotics, to help treat the rash and prevent infection.\n\n It\'s important to avoid scratching the affected area, as this can cause the rash to spread and increase the risk of infection. If you develop a fever or notice signs of infection, such as pus or drainage from the rash, it\'s important to seek medical attention right away.</string>
    <string name="welcome">Welcome, curious earthling!</string>
    <string name="instructions">Explore information about poisonous plants, or snap a photo to classify one!</string>
    <string name="classify_plants">Classify a Poisonous Plant</string>
    <string name="back">Back to home</string>
    <string name="image_preview">Preview</string>
    <string name="select_image">PICK FROM GALLERY</string>
    <string name="send_image">Classify Plant</string>
    <string name="take_picture_button">TAKE PICTURE</string>
    <string name="Disclaimer">Disclaimer: This AI is NOT infallible. Regardless of the result, please take precaution and use your best judgement.</string>
    <string name="go_back">Return</string>
    <string name="classify_directions">Take a picture from the camera or gallery to classify a plant!</string>
</resources>